--- a/www/package.json
+++ b/www/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
